Hello world JSP page and Windows deploy starts server.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 *.class
 
+# Emacs backups and autosaves
+*~
+[#]*[#]
+.\#*
+
+# Gradle wrappers
+gradle/*
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
