--- a/service/build.gradle
+++ b/service/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.6'
 
     testCompile "junit:junit-dep:4.+"
+    testCompile 'org.mockito:mockito-all:1.8.4'
 }
 
 test {
