--- a/service/build.gradle
+++ b/service/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     compile 'mysql:mysql-connector-java:5.1.6'
 
+    compile 'org.eluder.coveralls:coveralls-maven-plugin:4.0.0'
+
     testCompile "junit:junit-dep:4.+"
     testCompile 'org.mockito:mockito-all:1.8.4'
 }
