--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,6 +1,8 @@
 // Feckless Weasel Server Gradle Build Script
 // (C) 2015 Christian Gunderman
 
+apply plugin: 'cobertura'
+apply plugin: 'com.github.kt3k.coveralls'
 apply plugin: 'war'
 apply plugin: 'java'
 apply plugin: 'eclipse'
@@ -9,6 +11,20 @@ apply plugin: 'jacoco'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath 'net.saliman:gradle-cobertura-plugin:2.0.0'
+        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0x"
+    }
+}
+
+cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report
+  
 dependencies {
 
     compile 'javax.mail:mail:1.4.1'
