Added get/post endpoints to upload/download file

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     compile 'com.sun.jersey:jersey-server:1.13'
     compile 'com.sun.jersey:jersey-core:1.13'
     compile 'com.sun.jersey:jersey-servlet:1.13'
+    compile 'com.sun.jersey.contribs:jersey-multipart:1.13'
     compile 'javax:javaee-api:7.0'
-
 
     compile 'net.sf.flexjson:flexjson:3.3'
 
