Partial User OM coverage.

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testCompile 'org.eluder.coveralls:coveralls-maven-plugin:4.0.0'
     testCompile "junit:junit-dep:4.+"
     testCompile 'org.mockito:mockito-all:1.8.4'
+    testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
 }
 
 test {
