--- a/service/build.gradle
+++ b/service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'javax.servlet:jstl:1.2'
     compile 'javax:javaee-api:7.0'
     compile 'mysql:mysql-connector-java:5.1.6'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'org.json:json:20090211'
 
     testCompile 'org.eluder.coveralls:coveralls-maven-plugin:4.0.0'
     testCompile 'org.mockito:mockito-all:1.8.4'
@@ -38,6 +40,10 @@ dependencies {
     testCompile "junit:junit-dep:4.+"
     testCompile 'org.mockito:mockito-all:1.8.4'
     testCompile 'org.powermock:powermock-mockito-release-full:1.6.3'
+}
+configurations.all {
+    // check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 test {
